--- a/docs/site/src/content/docs/en/mcp/tools.mdx
+++ b/docs/site/src/content/docs/en/mcp/tools.mdx
@@ -1,281 +1,511 @@
 ---
-title: MCP Tools & Commands
-description: Complete reference for Station MCP tools and what you can accomplish through Claude Desktop
+title: MCP Tools Reference
+description: Complete reference for all 41 Station MCP tools
 ---
 
-# MCP Tools & Commands
+# MCP Tools Reference
 
-Once Station is connected to Claude Desktop via MCP, you have access to powerful tools for agent management and system integration. This page shows you exactly what you can accomplish and provides practical examples.
+Station provides 41 MCP tools for complete agent management, execution, evaluation, and infrastructure control. All tools are available through your AI assistant (Claude, Cursor, OpenCode, etc.).
 
-## Core Station MCP Tools
+## Tool Categories
 
-### Agent Management Tools
+| Category | Tools | Purpose |
+|----------|-------|---------|
+| [Agent Management](#agent-management) | 11 | Create, configure, and manage agents |
+| [Agent Execution](#agent-execution) | 4 | Run agents and inspect results |
+| [Evaluation & Testing](#evaluation--testing) | 7 | Test and benchmark agents |
+| [Reports & Analytics](#reports--analytics) | 4 | Performance reporting |
+| [Environment Management](#environment-management) | 3 | Manage environments |
+| [MCP Server Management](#mcp-server-management) | 5 | Configure MCP servers |
+| [Tool Discovery](#tool-discovery) | 2 | Find available tools |
+| [Scheduling](#scheduling) | 3 | Automate agent runs |
+| [Bundles](#bundles) | 1 | Package agents |
+| [Faker System](#faker-system) | 1 | Mock data generation |
 
-#### `call_agent` - Execute Station Agents
-**Purpose**: Run any Station agent with a specific task  
-**What it does**: Executes an agent and returns the complete result including tool usage, steps taken, and duration
+---
 
-**Example Commands**:
-```
-Run Station agent disk-monitor with the task: check disk usage and alert if any partition is over 80%
+## Agent Management
 
-Execute my database monitoring agent to check connection pool status
-
-Call agent deployment-pipeline to deploy the latest code to staging environment
-```
-
-#### `create_agent` - Create New Agents
-**Purpose**: Create new Station agents with specific tools and configuration  
-**What it does**: Sets up a new agent with dotprompt configuration, tool assignments, and environment settings
-
-**Example Commands**:
-```
-Create a new Station agent named "Security Scanner" that uses filesystem and network tools to scan for vulnerabilities
-
-Create an agent for monitoring AWS resources using the AWS CLI tools, max 10 steps
-
-Set up a database backup agent that can access PostgreSQL and S3 storage tools
-```
-
-#### `list_agents` - Browse Available Agents  
-**Purpose**: Show all agents across environments with their status and capabilities  
-**What it does**: Returns agent details including ID, name, environment, tools, and recent activity
-
-**Example Commands**:
-```
-List all my Station agents
-
-Show me agents in the production environment
-
-What agents do I have for infrastructure monitoring?
-```
-
-#### `get_agent_details` - Agent Information
-**Purpose**: Get detailed information about a specific agent  
-**What it does**: Returns complete agent configuration, tool assignments, execution history, and performance metrics
-
-**Example Commands**:
-```
-Show me details for Station agent security-scanner
-
-Get the configuration and recent runs for my deployment agent
-
-What tools does agent filesystem-monitor have access to?
-```
-
-### Tool & Environment Discovery
-
-#### `discover_tools` - Find Available Tools
-**Purpose**: Discover what MCP tools are available in your Station setup  
-**What it does**: Scans environments and returns available tools with descriptions and capabilities
-
-**Example Commands**:
-```
-What MCP tools are available in my Station setup?
-
-Show me all filesystem tools I can assign to agents
-
-List database tools available for agent creation
-```
-
-#### `list_tools` - Browse Tools by Environment
-**Purpose**: List tools filtered by environment or server  
-**What it does**: Shows detailed tool information including parameters, descriptions, and which agents use them
-
-**Example Commands**:
-```
-List all tools in the production environment
-
-Show me what tools are available from the AWS MCP server
-
-What monitoring tools can I use in development?
-```
-
-#### `list_environments` - Environment Overview  
-**Purpose**: Show available Station environments  
-**What it does**: Returns environment details including tool counts, agent counts, and configuration status
-
-**Example Commands**:
-```
-What Station environments do I have configured?
-
-Show me the difference between my dev and prod environments
-```
-
-## Practical Usage Patterns
-
-### Infrastructure Management
-
-**System Monitoring Setup**:
-```
-Create a Station agent that monitors system resources every hour and alerts via Slack when CPU exceeds 90% or disk space is low
-```
-
-**Log Analysis**:
-```
-Run my log analysis agent to scan the last 24 hours of application logs for errors and generate a summary report
-```
-
-**Database Health Checks**:
-```
-Execute agent db-health-monitor to check database connection pools, slow queries, and disk usage across all production databases
-```
-
-### Deployment & CI/CD
-
-**Automated Deployments**:
-```
-Create a deployment agent that can pull latest code, run tests, and deploy to staging with rollback capability
-```
-
-**Infrastructure as Code**:
-```
-Run my Terraform agent to plan and apply infrastructure changes for the new microservice
-```
-
-**Health Checks After Deployment**:
-```
-Execute the health check agent to verify all services are responding correctly after the deployment
-```
-
-### Security Operations
-
-**Vulnerability Scanning**:
-```
-Create a security agent that scans container images for vulnerabilities and checks for exposed secrets
-```
-
-**Compliance Auditing**:
-```
-Run agent compliance-auditor to perform a full compliance audit of our AWS infrastructure against SOC2 requirements
-```
-
-**Access Review**:
-```
-Execute the access review agent to audit user permissions and flag any overprivileged accounts
-```
-
-### Development Workflow
-
-**Code Quality Checks**:
-```
-Create an agent that runs linting, security scanning, and test coverage analysis on pull requests
-```
-
-**Database Management**:
-```
-Run my database agent to create a backup before the schema migration and set up the new tables
-```
-
-**Environment Synchronization**:
-```
-Execute the sync agent to update development environment with anonymized production data
-```
-
-## Advanced MCP Integration
-
-### Multi-Step Workflows
-
-Station agents can handle complex multi-step workflows:
+### `create_agent`
+Create a new agent with prompts, tools, and configuration.
 
 ```
-Create a deployment agent that:
-1. Runs full test suite
-2. Builds and scans container images
-3. Updates staging environment
-4. Runs integration tests
-5. Promotes to production if tests pass
-6. Sends Slack notifications at each step
+"Create a cost-analyzer agent that uses AWS tools to analyze spending"
 ```
 
-### Cross-Environment Operations
+**Parameters:**
+- `name` (required) - Agent name
+- `description` (required) - What the agent does
+- `prompt` (required) - System prompt
+- `environment_id` - Target environment
+- `max_steps` - Maximum execution steps (default: 5)
+- `tool_names` - List of tools to assign
+- `sandbox` - Sandbox configuration (python/node/bash)
+- `output_schema` - JSON schema for structured output
+
+### `update_agent`
+Modify an existing agent's configuration.
 
 ```
-List agents in both development and production environments and show me which ones need to be synchronized
-
-Create matching monitoring agents in dev and prod with environment-specific thresholds
+"Update cost-analyzer to use max_steps 10"
 ```
 
-### Tool Integration
-
-Agents can use multiple tools in combination:
-
-```
-Create an incident response agent that can:
-- Read logs from multiple systems
-- Query databases for error patterns  
-- Update PagerDuty incidents
-- Send status updates to Slack
-- Generate post-mortem reports
-```
-
-## Tool Assignment Examples
-
-When creating agents, you can specify exactly which tools they need:
-
-### Filesystem & System Tools
-```
-Create an agent with file operations, directory listing, and system monitoring tools
-```
-
-### Database Tools
-```
-Set up an agent with PostgreSQL, MySQL, and Redis tools for database operations
-```
-
-### Cloud Provider Tools  
-```
-Create an AWS infrastructure agent with EC2, S3, RDS, and CloudWatch access
-```
-
-### Communication Tools
-```
-Build a notification agent that can use Slack, email, and PagerDuty integrations
-```
-
-## Monitoring Agent Performance
-
-Track your agents through Claude Desktop:
+### `update_agent_prompt`
+Update only the agent's system prompt.
 
 ```
-Show me execution metrics for agent terraform-analyzer over the last week
-
-Which agents are using the most resources?
-
-Get performance details for my most frequently run agents
+"Update the prompt for incident-coordinator to be more concise"
 ```
 
-## Troubleshooting Through MCP
-
-Debug agent issues directly through Claude Desktop:
-
-```
-Check the configuration and recent error logs for agent deployment-pipeline
-
-List all failed agent runs in the last 24 hours
-
-Show me which agents have tool assignment issues
-```
-
-## Security & Audit
-
-Station provides complete audit trails accessible via MCP:
+### `delete_agent`
+Remove an agent permanently.
 
 ```
-Show me all agent executions in the production environment today
-
-List which users have created or modified agents this week
-
-Get audit logs for any agents that accessed sensitive database credentials
+"Delete the old-analyzer agent"
 ```
+
+### `list_agents`
+List all agents with optional filters.
+
+```
+"List all agents in the production environment"
+```
+
+**Parameters:**
+- `environment_id` - Filter by environment
+- `enabled_only` - Show only enabled agents
+- `limit` - Max results (default: 50)
+- `offset` - Pagination offset
+
+### `get_agent_details`
+Get complete configuration for a specific agent.
+
+```
+"Show me details for the incident-coordinator agent"
+```
+
+### `get_agent_schema`
+Get the input schema for an agent's dotprompt template.
+
+```
+"What variables does cost-analyzer accept?"
+```
+
+### `add_tool`
+Assign an MCP tool to an agent.
+
+```
+"Add the __aws_cost_explorer tool to cost-analyzer"
+```
+
+### `remove_tool`
+Remove a tool from an agent.
+
+```
+"Remove __deprecated_tool from my-agent"
+```
+
+### `add_agent_as_tool`
+Create multi-agent hierarchies by adding an agent as a callable tool.
+
+```
+"Add logs-investigator as a tool for incident-coordinator"
+```
+
+### `remove_agent_as_tool`
+Break an agent hierarchy link.
+
+```
+"Remove logs-investigator from incident-coordinator's tools"
+```
+
+---
+
+## Agent Execution
+
+### `call_agent`
+Execute an agent with a specific task.
+
+```
+"Run cost-analyzer with task: Analyze last week's AWS spending"
+```
+
+**Parameters:**
+- `agent_id` (required) - Agent to execute
+- `task` (required) - Task/prompt to run
+- `variables` - Input variables for dotprompt
+- `async` - Run asynchronously (default: false)
+- `store_run` - Save to history (default: true)
+- `timeout` - Timeout in seconds (default: 300)
+
+### `list_runs`
+List agent execution history.
+
+```
+"Show me the last 20 runs for cost-analyzer"
+```
+
+**Parameters:**
+- `agent_id` - Filter by agent
+- `status` - Filter by status (success/error/running)
+- `limit` - Max results (default: 50)
+
+### `inspect_run`
+Get detailed information about a specific run.
+
+```
+"Show me details for run 123"
+```
+
+**Parameters:**
+- `run_id` (required) - Run to inspect
+- `verbose` - Include full tool calls (default: true)
+
+### `list_runs_by_model`
+Filter runs by AI model.
+
+```
+"Show me all runs using gpt-4o-mini"
+```
+
+---
+
+## Evaluation & Testing
+
+### `generate_and_test_agent`
+Generate test scenarios and run comprehensive agent testing.
+
+```
+"Generate 50 test scenarios for incident-coordinator and run them"
+```
+
+**Parameters:**
+- `agent_id` (required) - Agent to test
+- `scenario_count` - Number of scenarios (default: 100)
+- `max_concurrent` - Parallel executions (default: 10)
+- `variation_strategy` - comprehensive/edge_cases/common
+
+### `batch_execute_agents`
+Run multiple agents concurrently for testing.
+
+```
+"Run cost-analyzer and security-scanner in parallel with 5 iterations each"
+```
+
+**Parameters:**
+- `tasks` - JSON array of execution tasks
+- `iterations` - Times to run each (default: 1, max: 100)
+- `max_concurrent` - Parallel limit (default: 5, max: 20)
+
+### `evaluate_benchmark`
+Run LLM-as-judge evaluation on a completed run.
+
+```
+"Evaluate run 123 using the benchmark system"
+```
+
+### `evaluate_dataset`
+Evaluate an entire dataset of agent runs.
+
+```
+"Evaluate the dataset at /path/to/dataset"
+```
+
+### `export_dataset`
+Export runs for external analysis.
+
+```
+"Export the last 100 runs to Genkit format"
+```
+
+**Parameters:**
+- `filter_agent_id` - Filter by agent
+- `filter_model` - Filter by model
+- `limit` - Max runs (default: 100)
+- `output_dir` - Output directory (default: ./evals/)
+
+### `list_benchmark_results`
+List previous evaluation results.
+
+```
+"Show me benchmark results for run 123"
+```
+
+### `get_benchmark_status`
+Check status of an evaluation task.
+
+```
+"What's the status of benchmark task abc123?"
+```
+
+---
+
+## Reports & Analytics
+
+### `create_report`
+Create a new performance report definition.
+
+```
+"Create a weekly report for the SRE team measuring incident response time"
+```
+
+**Parameters:**
+- `name` (required) - Report name
+- `environment_id` (required) - Environment to evaluate
+- `team_criteria` (required) - JSON defining success metrics
+- `agent_criteria` - Per-agent metrics
+- `filter_model` - Filter by AI model
+
+### `generate_report`
+Run benchmarks and generate a report.
+
+```
+"Generate the SRE team performance report"
+```
+
+### `list_reports`
+List all report definitions.
+
+```
+"Show me all reports for production"
+```
+
+### `get_report`
+Get details of a specific report.
+
+```
+"Show me the latest SRE report results"
+```
+
+---
+
+## Environment Management
+
+### `create_environment`
+Create a new environment.
+
+```
+"Create a staging environment"
+```
+
+### `delete_environment`
+Delete an environment and all its data.
+
+```
+"Delete the old-staging environment"
+```
+
+### `list_environments`
+List all environments.
+
+```
+"What environments do I have?"
+```
+
+---
+
+## MCP Server Management
+
+### `add_mcp_server_to_environment`
+Add an MCP server configuration.
+
+```
+"Add a Datadog MCP server to production"
+```
+
+**Parameters:**
+- `environment_name` (required)
+- `server_name` (required)
+- `command` (required) - Server command
+- `args` - Command arguments
+- `env` - Environment variables
+- `description` - Server description
+
+### `update_mcp_server_in_environment`
+Update an existing MCP server.
+
+```
+"Update the datadog server to use a new API key"
+```
+
+### `delete_mcp_server_from_environment`
+Remove an MCP server.
+
+```
+"Remove the deprecated-server from production"
+```
+
+### `list_mcp_servers_for_environment`
+List servers in an environment.
+
+```
+"What MCP servers are in production?"
+```
+
+### `list_mcp_configs`
+List all MCP configurations.
+
+```
+"Show me all MCP configs across environments"
+```
+
+---
+
+## Tool Discovery
+
+### `discover_tools`
+Discover tools from MCP server configurations.
+
+```
+"Discover what tools are available from the AWS server"
+```
+
+**Parameters:**
+- `environment_id` - Filter by environment
+- `config_id` - Specific MCP config
+
+### `list_tools`
+List available tools with search.
+
+```
+"List all tools that mention 'cost'"
+```
+
+**Parameters:**
+- `environment_id` - Filter by environment
+- `search` - Search term
+- `limit` - Max results (default: 50)
+
+---
+
+## Scheduling
+
+### `set_schedule`
+Schedule an agent to run automatically.
+
+```
+"Schedule cost-analyzer to run daily at 9 AM"
+```
+
+**Parameters:**
+- `agent_id` (required)
+- `cron_schedule` (required) - 6-field cron expression
+- `schedule_variables` - Variables for scheduled runs
+- `enabled` - Enable/disable (default: true)
+
+### `get_schedule`
+View an agent's schedule.
+
+```
+"What's the schedule for cost-analyzer?"
+```
+
+### `remove_schedule`
+Remove an agent's schedule.
+
+```
+"Remove the schedule from cost-analyzer"
+```
+
+---
+
+## Bundles
+
+### `create_bundle_from_environment`
+Package an environment as a distributable bundle.
+
+```
+"Create a bundle from the production environment"
+```
+
+**Parameters:**
+- `environmentName` (required)
+- `outputPath` - Output file path
+
+---
+
+## Faker System
+
+### `faker_create_standalone`
+Create an AI-powered mock data server.
+
+```
+"Create a prometheus faker that generates Kubernetes metrics"
+```
+
+**Parameters:**
+- `environment_name` (required)
+- `faker_name` (required)
+- `description` (required)
+- `goal` (required) - AI instruction for data generation
+- `tools` - JSON array of tool definitions
+- `auto_sync` - Sync to environment (default: true)
+- `persist` - Persist to template.json (default: true)
+
+---
+
+## Usage Examples
+
+### Create an Incident Response Team
+
+```
+You: Create an incident response team with a coordinator and three specialists
+
+Claude: I'll create the team for you.
+
+[Using create_agent with name="incident-coordinator"...]
+✅ Created incident_coordinator
+
+[Using create_agent with name="logs-investigator"...]
+✅ Created logs_investigator
+
+[Using add_agent_as_tool...]
+✅ Added logs_investigator as tool for incident_coordinator
+
+[Continues for all specialists...]
+
+Your incident response team is ready!
+```
+
+### Run a Cost Analysis
+
+```
+You: Analyze yesterday's AWS costs
+
+Claude: I'll run the cost analyzer.
+
+[Using call_agent with agent_id="21", task="Analyze yesterday's costs"...]
+
+Results:
+- Total spend: $1,247.32
+- Top service: EC2 ($580)
+- 15% increase from last week
+- Anomaly detected: Lambda costs up 40%
+```
+
+### Generate Performance Report
+
+```
+You: How is my SRE team performing?
+
+Claude: [Using generate_report with report_id="sre-team"...]
+
+Team Performance: 7.5/10
+- Incident response: 8.5/10
+- Tool utilization: 8.0/10
+- Root cause accuracy: 7.5/10
+- Communication: 6.5/10
+```
+
+## Tool Naming Convention
+
+- Station tools appear with prefix based on your MCP client
+- In OpenCode: `opencode-station_create_agent`
+- In Claude Desktop: `station-create_agent`
+- Tool names from MCP servers use `__` prefix: `__aws_cost_explorer`
 
 ## Next Steps
 
-- **[Agent Interaction Guide →](/station/en/mcp/agents)** - Learn advanced agent management patterns
-- **[Creating Custom Agents →](/station/en/agents/creating)** - Build agents for your specific needs  
-- **[Bundle Registry →](https://cloudshipai.github.io/registry)** - Install pre-built agent bundles
-- **[Other MCP Clients →](/station/en/mcp/other-clients)** - Connect Station to additional tools
-
----
-
-**Remember**: All Station MCP interactions provide rich context and detailed results. Ask follow-up questions to drill down into specifics, and Claude Desktop will help you manage your infrastructure through Station's intelligent agents.
+- [Agent Configuration](/station/en/agents/config) - Detailed agent setup
+- [Scheduling](/station/en/scheduling) - Automate agent runs
+- [Observability](/station/en/observability) - Monitor agent execution
