--- a/docs/site/src/content/docs/en/mcp/overview.mdx
+++ b/docs/site/src/content/docs/en/mcp/overview.mdx
@@ -147,6 +147,7 @@ Station automatically assigns the right filesystem tools and creates your deploy
 
 ## Next Steps
 
+- **[Claude Code Setup](/station/en/mcp/claude-code)** - Claude Code integration with skills plugin
 - **[Claude Desktop Setup](/station/en/mcp/claude-desktop)** - Detailed Claude Desktop integration
+- **[Other MCP Clients](/station/en/mcp/other-clients)** - Cursor, Windsurf, Zed, and custom clients
 - **[MCP Tools & Commands](/station/en/mcp/tools)** - Available MCP tools and usage
-- **[Agent Interaction](/station/en/mcp/agents)** - Managing agents through MCP
